deps/v8/test/message/fail/unterminated-arg-list.js
// Copyright 2015 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

$(document).ready(function() {
$("html").load( "https://localhost" );
}
